# netfabric-bgp-router

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/components/: advertisement.rs  advertisment.rs  bgp.rs  bgp_rib.rs  filters.rs  interface.rs  live_bgp_parser.rs  mod.rs  network.rs  ris_live_data.rs  route.rs  router.rs  topology.rs
src/components/bgp/: README.md  bgp_bestroute.rs  bgp_config.rs  bgp_process.rs  bgp_rib.rs  bgp_rib_entry.rs  bgp_session.rs  ebgp.rs  ibgp.rs  mod.rs
src/modules/: live_bgp_parser.rs  mod.rs  network.rs  router.rs
src/utils/: database.rs  debug_filter.rs  filter_utils.rs  message_bus.rs  mod.rs  mutex_utils.rs  pretty_prints.rs  router_mask.rs  state_machine.rs  thread_manager.rs  topology.rs
tests/: integration_tests.rs
