[package]
name = "netfabric-bgp"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["std", "derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
env_logger = "0.10"
thiserror = "2.0.12"
uuid = { version = "1.7", features = ["serde", "v4"] }
bytes = "1.5"
ip_network_table = "0.2.0"
ip_network = { version = "0.4.1", features = ["serde"] }

[profile.dev]
debug = true
overflow-checks = true
